Updated Favicon and some styling on homepage

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords"
     content="Creative Technologist, Web Developer, React, Audio Visual, Interactive Design, Portfolio, Stockholm" />
   <meta name="author" content="Joshua Ng" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Joshua Ng - Creative Technologist</title>
 
